--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -62,7 +62,7 @@
                     <%= comment.body %>
                     <!-- コメントの削除機能-->
                     <% if comment.user_id == current_user.id %>
-                      <%= button_to "削除", {controller: "comments", :action => "destroy", :id => comment.id}, :method => delete %>
+                      <%= button_to "削除", {controller: "comments", :action => "destroy", :id => comment.id}, :method => 'delete' %>
                     <% end %>
                 <% end %>
 
